--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -28,6 +28,15 @@
         <artifactId>javax.mail</artifactId>
         <version>1.6.2</version>
     </dependency>
+    
+    <!-- Java HTML Parser -->
+    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.15.4</version>
+    </dependency>
+    
 
 
     <!-- Java JSON Library -->
