--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -19,8 +19,13 @@
   
   <dependencies>
   
-
-
+    <!-- Thumbnail Generator -->
+    <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+    <dependency>
+        <groupId>net.coobird</groupId>
+        <artifactId>thumbnailator</artifactId>
+        <version>0.4.20</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
     <dependency>
